support jdk gt 8